# allocbench

./: .gitignore  .gitlab-ci.yml  .pylint.rc  LICENSE  Makefile  Pipfile  Readme.md  TODO  bench.py  bench_conprod.c  bench_conprod.py  bench_loop.c  bench_loop.py  bench_mysql.py  benchmark.py  chattymalloc.c  chattyparser.py  common_targets.py  dj_trace.py  falsesharing.py  larson.py  loop.py  memusage.c  merge.py  mysql.py  print_status_on_exit.c  summarize.py  trace_run.c
allocators/: BA_allocators.py  all.py  glibc_2.28_no_passive_falsesharing.patch  glibc_2.28_no_passive_falsesharing_fancy.patch  glibcs.py  no_falsesharing.py
allocbench/: Makefile  __init__.py  align_to_cl.c  allocator.py  analyse.py  artifact.py  benchmark.py  directories.py  exec.c  facter.py  globalvars.py  plots.py  sig_handlers.c  util.py
allocbench/benchmarks/espresso/: CMakeLists.txt
benchmarks/: bench_loop.c
doc/: Allocators.md  Benchmarks.md  Results.md
scripts/: bench_sum.py  chatty_histogram.py  histogram.py  matplotlib_histograms.py  merge_saves.py  paper_plots.py  print_facts.py
src/: Makefile  __init__.py  abort_handler.c  allocator.py  allocators.py  analyse.py  artifact.py  benchmark.py  bump_alloc.h  bumpptr_alloc.c  chattymalloc.c  chattymalloc.h  chattyparser.py  common_targets.py  dj_trace.py  exec.c  facter.py  falsesharing.py  globalvars.py  larson.py  loop.py  malloc.c  mysql.py  plots.py  print_status_on_exit.c  run_cmd.c  sig_handlers.c  speedymalloc.c  targets.py  util.py
src/benchmarks/cfrac/: CMakeLists.txt  Makefile
targets/: Makefile
tools/: check-pylint
(+130 files in other folders)
